--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,12 @@
-name: json2dart
-description: A new Flutter project.
+name: json2dart_safe
+description: A plugin to generated json with Null-Safety feature and safe convert with default value.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+version: 1.0.0+1
+author: Barry <18312019106yw@gmail.com>
+homepage: https://github.com/heinigger/json2dart
+
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -15,7 +18,6 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -27,7 +29,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.3
 
 dev_dependencies:
   flutter_test:
