--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,8 +3,8 @@ description: A plugin to generated json with Null-Safety feature and safe conver
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
-version: 1.0.3+4
-homepage: https://github.com/heinigger/json2dart
+version: 1.0.4+5
+homepage: https://github.com/fastcode555/Json2Dart_Null_Safety.git
 
 
 # The following defines the version and build number for your application.
