--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,13 @@
 name: json2dart_safe
 description: A plugin to generated json with Null-Safety feature and safe convert with default value.
 
-version: 1.1.1
+version: 1.1.2+database
 homepage: https://github.com/fastcode555/Json2Dart_Null_Safety.git
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
+
+dependencies:
+  flutter:
+    sdk: flutter
+  sqflite: ^2.0.2+1
