--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: json2dart_safe
 description: A plugin to generated json with Null-Safety feature and safe convert with default value.
 
-version: 1.1.2+database
+version: 1.1.3+database
 homepage: https://github.com/fastcode555/Json2Dart_Null_Safety.git
 
 environment:
@@ -10,5 +10,5 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  sqflite: ^2.0.2+1
-  path: ^1.8.1
+  sqflite:
+  path:
