--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -39,7 +39,8 @@ dependencies:
   marquee: ^2.2.1
   cached_network_image: ^3.2.0
   get: ^4.6.1
-  json2dart_safe: ^1.3.5+database
+  json2dart_safe:
+    path: ../
   disk_space: ^0.2.1
   oktoast: ^3.1.5
   auto_size_text: ^3.0.0
