--- a/json2dart_db/pubspec.yaml
+++ b/json2dart_db/pubspec.yaml
@@ -1,8 +1,8 @@
 name: json2dart_db
-description: use json2dart_safe togethor to surppot the database
+description: use json2dart_safe togethor to surppot the database，easy support
 
-version: 0.0.2
-homepage: https://github.com/fastcode555/Json2Dart_Null_Safety.git
+version: 0.0.3
+homepage: https://github.com/fastcode555/Json2Dart_Null_Safety/tree/master/json2dart_db
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
