--- a/json2dart_dbffi/pubspec.yaml
+++ b/json2dart_dbffi/pubspec.yaml
@@ -10,7 +10,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  sqflite_common_ffi:
+  sqflite:
+  path:
 
 dev_dependencies:
   flutter_test:
