--- a/json2dart_dbffi/pubspec.yaml
+++ b/json2dart_dbffi/pubspec.yaml
@@ -1,7 +1,7 @@
 name: json2dart_dbffi
 description: use json2dart_safe togethor to surppot the database for platform contains Android,Ios,Macos,Window and Linux，easy support.
 
-version: 0.0.5
+version: 0.0.6
 homepage: https://github.com/fastcode555/Json2Dart_Null_Safety/tree/master/json2dart_dbffi
 
 environment:
@@ -13,6 +13,7 @@ dependencies:
   sqflite_common_ffi:
   sqflite_common:
   path:
+  json2dart_safe:
 
 dev_dependencies:
   flutter_test:
