--- a/json2dart_viewerffi/pubspec.yaml
+++ b/json2dart_viewerffi/pubspec.yaml
@@ -1,7 +1,7 @@
 name: json2dart_viewerffi
-description: A project to view sqlite datas.
+description: A project to view sqlite datas,contain tables,colums,table strcture.
 
-version: 1.0.2
+version: 1.0.3
 homepage: https://github.com/fastcode555/Json2Dart_Null_Safety/tree/master/json2dart_viewerffi
 
 environment:
@@ -14,3 +14,4 @@ dependencies:
     sdk: flutter
 
   json2dart_dbffi:
+
