--- a/json2dart_viewer/pubspec.yaml
+++ b/json2dart_viewer/pubspec.yaml
@@ -1,5 +1,5 @@
 name: json2dart_viewer
-description: A Viewer 2 query database data
+description: A Viewer 2 query database data,which contains tables,colums and table structure
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -16,7 +16,7 @@ homepage: https://github.com/fastcode555/Json2Dart_Null_Safety/tree/master/json2
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.5
+version: 1.0.6
 
 environment:
   sdk: '>=2.18.0 <3.0.0'
