--- a/json2dart_dbffi/pubspec.yaml
+++ b/json2dart_dbffi/pubspec.yaml
@@ -1,7 +1,7 @@
 name: json2dart_dbffi
 description: use json2dart_safe togethor to surppot the database for platform contains Android,Ios,Macos,Window and Linux，easy support.
 
-version: 1.0.0
+version: 1.0.1
 homepage: https://github.com/fastcode555/Json2Dart_Null_Safety/tree/master/json2dart_dbffi
 
 environment:
@@ -14,6 +14,7 @@ dependencies:
   sqflite_common:
   path:
   json2dart_safe:
+  path_provider:
 
 dev_dependencies:
   flutter_test:
