feat：1.增加二维数组的第一种解析方式

--- a/json2dart_db/example/plugins.properties
+++ b/json2dart_db/example/plugins.properties
@@ -1,5 +1,8 @@
-plugin.rawLanguage=en
-plugin.languages=zh-Hans,zh-Hant,en
-plugin.needTranslate=true
+#\u300Ecomments\u300FUpdate key\uFF1Aplugin.clone
+#Sat Dec 09 09:17:14 ICT 2023
+plugin.clone=true
 plugin.countryCode=CN,HK,US
 plugin.languageDir=/lib/res
+plugin.languages=zh-Hans,zh-Hant,en
+plugin.needTranslate=true
+plugin.rawLanguage=en
