--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,4 +5,4 @@ version: 1.5.3
 homepage: https://github.com/fastcode555/Json2Dart_Null_Safety.git
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: '>=2.19.1 <3.0.0'
