--- a/example/plugins.properties
+++ b/example/plugins.properties
@@ -1,5 +1,8 @@
-plugin.rawLanguage=en
-plugin.languages=zh-Hans,zh-Hant,en
-plugin.needTranslate=true
+#\u300Ecomments\u300FUpdate key\uFF1Aplugin.clone
+#Sat Dec 09 10:10:09 ICT 2023
+plugin.clone=true
 plugin.countryCode=CN,HK,US
 plugin.languageDir=/lib/res
+plugin.languages=zh-Hans,zh-Hant,en
+plugin.needTranslate=true
+plugin.rawLanguage=en
