--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
 name: json2dart_safe
 description: A plugin to generated json with Null-Safety feature and safe convert with default value.
 
-version: 1.5.4
+version: 1.5.5
 homepage: https://github.com/fastcode555/Json2Dart_Null_Safety.git
 
 environment:
-  sdk: '>=2.19.1 <3.0.0'
+  sdk: ">=2.12.0 <3.0.0"
