feat:升级适配flutter_ume_plus

--- a/json2dart_viewerffi/pubspec.yaml
+++ b/json2dart_viewerffi/pubspec.yaml
@@ -1,14 +1,14 @@
 name: json2dart_viewerffi
 description: A project to view sqlite datas,contain tables,colums,table strcture.
 
-version: 1.0.6
+version: 2.0.0
 homepage: https://github.com/fastcode555/Json2Dart_Null_Safety/tree/master/json2dart_viewerffi
 
 environment:
   sdk: '>=2.18.0 <3.0.0'
 
 dependencies:
-  flutter_ume: '>=0.3.0'
+  flutter_ume_plus: '>=4.0.0'
   auto_size_text:
   flutter:
     sdk: flutter
