feat:升级适配flutter version

--- a/example/ios/Runner/Info.plist
+++ b/example/ios/Runner/Info.plist
@@ -75,5 +75,7 @@
         <key>NSAllowsArbitraryLoadsForMedia</key>
         <true/>
     </dict>
+	<key>UIApplicationSupportsIndirectInputEvents</key>
+	<true/>
 </dict>
 </plist>
