--- a/json2dart_viewer/pubspec.yaml
+++ b/json2dart_viewer/pubspec.yaml
@@ -16,7 +16,7 @@ homepage: https://github.com/fastcode555/Json2Dart_Null_Safety/tree/master/json2
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 2.0.1
+version: 2.0.2
 
 environment:
   sdk: '>=2.18.0 <3.0.0'
@@ -32,7 +32,7 @@ dependencies:
     sdk: flutter
   flutter_ume_plus: '>=4.0.0'
   auto_size_text:
-
+  flutter_highlight:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   json2dart_db:
