--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,11 @@
 name: json2dart_safe
 description: A plugin to generated json with Null-Safety feature and safe convert with default value.
 
-version: 1.5.8
+version: 1.5.9
 homepage: https://github.com/fastcode555/Json2Dart_Null_Safety.git
 
 environment:
   sdk: '>=2.12.0 <4.0.0'
+
+dev_dependencies:
+  lints: ^2.0.0
